[package]
name = "lift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.10.1"
log = "0.4.20"
magic = "0.16.2"

[[bin]]
name = "lift"
path = "src/lift.rs"

[profile.release]
opt-level = "s"
strip = "symbols"